fix(Worklets): Reduce font size on mobile devices (#8188)
## Summary
Reduce font size on mobile devices

## Test plan

--- a/packages/docs-worklets/src/components/HomepageAboutSection/styles.module.css
+++ b/packages/docs-worklets/src/components/HomepageAboutSection/styles.module.css
@@ -29,6 +29,10 @@
 @media (max-width: 996px) {
   .aboutSection {
     gap: 16px;
+
+    h3 {
+      font-size: 26px;
+    }
   }
 
   .videoPlaceholder {
